force-app/main/default/objects/Customer_Onboarding__c/fields/allow_no_data__c.field-meta.xml
<CustomField>
    <fullName>allow_no_data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>allow no data</label>
    <type>Checkbox</type>
</CustomField>