force-app/main/default/objects/Customer_Onboarding__c/fields/auto_pickup__c.field-meta.xml
<CustomField>
    <fullName>auto_pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>auto pickup</label>
    <type>Checkbox</type>
</CustomField>