force-app/main/default/objects/Customer_Onboarding__c/fields/Average_weight_and_price_of_shipment__c.field-meta.xml
<CustomField>
    <fullName>Average_weight_and_price_of_shipment__c</fullName>
    <label>Average weight and price of shipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>