force-app/main/default/objects/Customer_Onboarding__c/fields/Beneficiary_name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_name__c</fullName>
    <label>Beneficiary name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>