force-app/main/default/objects/Customer_Onboarding__c/fields/Billing_Client_Config__c.field-meta.xml
<CustomField>
    <fullName>Billing_Client_Config__c</fullName>
    <label>Billing Client Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Client HO</fullName>
            </value>
            <value>
                <fullName>Drop State</fullName>
            </value>
            <value>
                <fullName>Pickup State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>