force-app/main/default/objects/Customer_Onboarding__c/fields/Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode__c</fullName>
    <label>Billing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Surface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>