force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Bird_Contract_Date__c</fullName>
    <formula>DATE(YEAR( Contract_Start_Date__c) , MONTH(Contract_Start_Date__c ) , 01)</formula>
    <label>Bird Contract Date</label>
    <type>Date</type>
</CustomField>