force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Bird_Request_Id__c</fullName>
    <label>Bird Request Id</label>
    <type>TextArea</type>
</CustomField>