force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Request_Id_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Bird_Request_Id_Addendum__c</fullName>
    <label>Bird Request Id (Addendum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>