force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Bird_Response_Message__c</fullName>
    <label>Bird Response Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>