force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Response_Message_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Bird_Response_Message_Addendum__c</fullName>
    <label>Bird Response Message (Addendum)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>