force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Bird_Response_Status__c</fullName>
    <label>Bird Response Status</label>
    <length>18</length>
    <type>Text</type>
</CustomField>