force-app/main/default/objects/Customer_Onboarding__c/fields/Bird_Response_Status_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Bird_Response_Status_Addendum__c</fullName>
    <label>Bird Response Status (Addendum)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>