force-app/main/default/objects/Customer_Onboarding__c/fields/CL_PANEL_Password__c.field-meta.xml
<CustomField>
    <fullName>CL_PANEL_Password__c</fullName>
    <label>CL PANEL Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>