force-app/main/default/objects/Customer_Onboarding__c/fields/CL_PANEL_User_Name__c.field-meta.xml
<CustomField>
    <fullName>CL_PANEL_User_Name__c</fullName>
    <label>CL PANEL User Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>