force-app/main/default/objects/Customer_Onboarding__c/fields/Client_Label_Alias__c.field-meta.xml
<CustomField>
    <fullName>Client_Label_Alias__c</fullName>
    <label>Client Label/Alias</label>
    <length>30</length>
    <type>Text</type>
</CustomField>