force-app/main/default/objects/Customer_Onboarding__c/fields/Client_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Client_Serial_No__c</fullName>
    <description>Client Serial No. received after Client Ware house is created</description>
    <label>Client Serial No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>