force-app/main/default/objects/Customer_Onboarding__c/fields/Company_Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Name__c</fullName>
    <label>Company Registered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>