force-app/main/default/objects/Customer_Onboarding__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Onboardings</relationshipLabel>
    <relationshipName>Customer_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>