force-app/main/default/objects/Customer_Onboarding__c/fields/Customer_s_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_IP_Address__c</fullName>
    <label>Customer&#39;s IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>