force-app/main/default/objects/Customer_Onboarding__c/fields/Desired_HQ_Name__c.field-meta.xml
<CustomField>
    <fullName>Desired_HQ_Name__c</fullName>
    <label>Desired HQ Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>