force-app/main/default/objects/Customer_Onboarding__c/fields/Eco_Code__c.field-meta.xml
<CustomField>
    <fullName>Eco_Code__c</fullName>
    <label>Eco Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>