force-app/main/default/objects/Customer_Onboarding__c/fields/EMAIL_POC2__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC2__c</fullName>
    <label>EMAIL POC2</label>
    <type>Email</type>
</CustomField>