force-app/main/default/objects/Customer_Onboarding__c/fields/EMAIL_POC3__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC3__c</fullName>
    <label>EMAIL POC3</label>
    <type>Email</type>
</CustomField>