force-app/main/default/objects/Customer_Onboarding__c/fields/FC_Email_ID_s__c.field-meta.xml
<CustomField>
    <fullName>FC_Email_ID_s__c</fullName>
    <description>For Fulfillment  COB Only</description>
    <label>FC Email ID(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>