force-app/main/default/objects/Customer_Onboarding__c/fields/File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to Bird</label>
    <type>Checkbox</type>
</CustomField>