force-app/main/default/objects/Customer_Onboarding__c/fields/Fresh_Book_Code__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Book_Code__c</fullName>
    <label>Freshbook Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>