force-app/main/default/objects/Customer_Onboarding__c/fields/Fulfilment_Service__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfilment Service</label>
    <type>Checkbox</type>
</CustomField>