force-app/main/default/objects/Customer_Onboarding__c/fields/Godam_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Godam_Client_Id__c</fullName>
    <label>Godam Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>