force-app/main/default/objects/Customer_Onboarding__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <description>For Fulfillment Type Only</description>
    <inlineHelpText>15 Digit GST No.</inlineHelpText>
    <label>GST No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>