force-app/main/default/objects/Customer_Onboarding__c/fields/GST_Not_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Not_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Not Registered</label>
    <type>Checkbox</type>
</CustomField>