force-app/main/default/objects/Customer_Onboarding__c/fields/HQ_UUID__c.field-meta.xml
<CustomField>
    <fullName>HQ_UUID__c</fullName>
    <description>Capture HQ UUID when send to HQ is sent</description>
    <label>HQ UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>