force-app/main/default/objects/Customer_Onboarding__c/fields/Invoice_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_City__c</fullName>
    <label>Invoice Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>