force-app/main/default/objects/Customer_Onboarding__c/fields/Invoice_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_Line_1__c</fullName>
    <label>Invoice Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>