force-app/main/default/objects/Customer_Onboarding__c/fields/Invoice_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_Postal_Code__c</fullName>
    <label>Invoice Address Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>