force-app/main/default/objects/Customer_Onboarding__c/fields/Invoicing_Mode_F__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Mode_F__c</fullName>
    <formula>Text(Invoicing_Mode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Mode</label>
    <type>Text</type>
</CustomField>