force-app/main/default/objects/Customer_Onboarding__c/fields/Is_Fc_document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Fc_document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fc document Uploaded</label>
    <type>Checkbox</type>
</CustomField>