force-app/main/default/objects/Customer_Onboarding__c/fields/Is_Postpaid__c.field-meta.xml
<CustomField>
    <fullName>Is_Postpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Postpaid</label>
    <type>Checkbox</type>
</CustomField>