force-app/main/default/objects/Customer_Onboarding__c/fields/isCo_Owner__c.field-meta.xml
<CustomField>
    <fullName>isCo_Owner__c</fullName>
    <formula>IF(Opportunity__r.Owner.Id = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCo-Owner</label>
    <type>Checkbox</type>
</CustomField>