force-app/main/default/objects/Customer_Onboarding__c/fields/IsDocuments_Verified__c.field-meta.xml
<CustomField>
    <fullName>IsDocuments_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Verified</label>
    <type>Checkbox</type>
</CustomField>