force-app/main/default/objects/Customer_Onboarding__c/fields/IsDraft__c.field-meta.xml
<CustomField>
    <fullName>IsDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDraft</label>
    <type>Checkbox</type>
</CustomField>