force-app/main/default/objects/Customer_Onboarding__c/fields/Mail_Shared__c.field-meta.xml
<CustomField>
    <fullName>Mail_Shared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Shared</label>
    <type>Checkbox</type>
</CustomField>