force-app/main/default/objects/Customer_Onboarding__c/fields/Movement_Config__c.field-meta.xml
<CustomField>
    <fullName>Movement_Config__c</fullName>
    <label>Movement Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Client HO state GST IN</fullName>
            </value>
            <value>
                <fullName>Warehouse state GST IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>