force-app/main/default/objects/Customer_Onboarding__c/fields/Name_POC1__c.field-meta.xml
<CustomField>
    <fullName>Name_POC1__c</fullName>
    <label>Name POC1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>