force-app/main/default/objects/Customer_Onboarding__c/fields/Name_POC2__c.field-meta.xml
<CustomField>
    <fullName>Name_POC2__c</fullName>
    <label>Name POC2</label>
    <length>45</length>
    <type>Text</type>
</CustomField>