force-app/main/default/objects/Customer_Onboarding__c/fields/Onboarding_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Accepted__c</fullName>
    <description>Date/Time when Onboarding form was Accepted</description>
    <label>Onboarding Accepted</label>
    <type>DateTime</type>
</CustomField>