force-app/main/default/objects/Customer_Onboarding__c/fields/Onboarding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Completed__c</fullName>
    <label>Onboarding Completed</label>
    <type>DateTime</type>
</CustomField>