force-app/main/default/objects/Customer_Onboarding__c/fields/OnBoarding_Form_Last_View_Date__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Form_Last_View_Date__c</fullName>
    <label>OnBoarding Form Last View Date</label>
    <type>DateTime</type>
</CustomField>