force-app/main/default/objects/Customer_Onboarding__c/fields/Operating_Account__c.field-meta.xml
<CustomField>
    <fullName>Operating_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Onboardings</relationshipLabel>
    <relationshipName>Customer_Onboardings1</relationshipName>
    <type>Lookup</type>
</CustomField>