force-app/main/default/objects/Customer_Onboarding__c/fields/Opportunity_Owner_Director__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Director__c</fullName>
    <formula>Opportunity__r.Owner.Director__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner&#39;s Director</label>
    <type>Text</type>
</CustomField>