force-app/main/default/objects/Customer_Onboarding__c/fields/Opportunity_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SubCategory__c</fullName>
    <formula>Opportunity__r.Sub_Category_Formula__c</formula>
    <label>Opportunity SubCategory</label>
    <type>Text</type>
</CustomField>