force-app/main/default/objects/Customer_Onboarding__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>Created against SF - 154</description>
    <label>Oracle ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>