force-app/main/default/objects/Customer_Onboarding__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number(To Send SMS)</label>
    <type>Phone</type>
</CustomField>