force-app/main/default/objects/Customer_Onboarding__c/fields/Phone_POC1__c.field-meta.xml
<CustomField>
    <fullName>Phone_POC1__c</fullName>
    <label>Phone POC1</label>
    <type>Phone</type>
</CustomField>