force-app/main/default/objects/Customer_Onboarding__c/fields/Pickup_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address_Line_1__c</fullName>
    <label>Pickup Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>