force-app/main/default/objects/Customer_Onboarding__c/fields/Pickup_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address_State__c</fullName>
    <label>Pickup Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>