force-app/main/default/objects/Customer_Onboarding__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <label>Pickup Location</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>