force-app/main/default/objects/Customer_Onboarding__c/fields/Pickup_Location_Pin_code__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location_Pin_code__c</fullName>
    <label>Pickup Location Pin-code</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>