force-app/main/default/objects/Customer_Onboarding__c/fields/POC_HQ_Response__c.field-meta.xml
<CustomField>
    <fullName>POC_HQ_Response__c</fullName>
    <label>POC HQ Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>