force-app/main/default/objects/Customer_Onboarding__c/fields/POC_Team__c.field-meta.xml
<CustomField>
    <fullName>POC_Team__c</fullName>
    <label>POC Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North POC</fullName>
            </value>
            <value>
                <fullName>Fashion CSM</fullName>
            </value>
            <value>
                <fullName>West POC</fullName>
            </value>
            <value>
                <fullName>South POC</fullName>
            </value>
            <value>
                <fullName>LT B2C POC</fullName>
            </value>
            <value>
                <fullName>Ravinder Thakur</fullName>
            </value>
            <value>
                <fullName>North CSM B2B</fullName>
            </value>
            <value>
                <fullName>West CSM B2B</fullName>
            </value>
            <value>
                <fullName>South CSM B2B</fullName>
            </value>
            <value>
                <fullName>East CSM B2B</fullName>
            </value>
            <value>
                <fullName>LT CSM</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>Xborder Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>