force-app/main/default/objects/Customer_Onboarding__c/fields/POC_Welcome_Mail__c.field-meta.xml
<CustomField>
    <fullName>POC_Welcome_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is POC Welcome Mail sent ?</label>
    <type>Checkbox</type>
</CustomField>