force-app/main/default/objects/Customer_Onboarding__c/fields/Postal_Cat1__c.field-meta.xml
<CustomField>
    <fullName>Postal_Cat1__c</fullName>
    <label>Postal Cat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>---------</fullName>
            </value>
            <value>
                <fullName>CatA</fullName>
            </value>
            <value>
                <fullName>CatB</fullName>
            </value>
            <value>
                <fullName>CatC</fullName>
            </value>
            <value>
                <fullName>CatD</fullName>
            </value>
            <value>
                <fullName>CatE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>