force-app/main/default/objects/Customer_Onboarding__c/fields/push_url__c.field-meta.xml
<CustomField>
    <fullName>push_url__c</fullName>
    <label>push_url</label>
    <length>50</length>
    <type>Text</type>
</CustomField>