force-app/main/default/objects/Customer_Onboarding__c/fields/Registered_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address_City__c</fullName>
    <label>Registered Address City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>