force-app/main/default/objects/Customer_Onboarding__c/fields/Registered_Address_Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address_Oracle_ID__c</fullName>
    <label>Registered Address Oracle ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>