force-app/main/default/objects/Customer_Onboarding__c/fields/Registered_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address_Postal_Code__c</fullName>
    <label>Registered Address Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>