force-app/main/default/objects/Customer_Onboarding__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <label>Return Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Warehouse</fullName>
            </value>
            <value>
                <fullName>In Center</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>