force-app/main/default/objects/Customer_Onboarding__c/fields/Return_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Return_Address_Line_2__c</fullName>
    <label>Return Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>