force-app/main/default/objects/Customer_Onboarding__c/fields/Return_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Address_Postal_Code__c</fullName>
    <label>Return Address Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>