force-app/main/default/objects/Customer_Onboarding__c/fields/Return_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Return_Address_State__c</fullName>
    <label>Return Address State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>