force-app/main/default/objects/Customer_Onboarding__c/fields/RTGS_IFSC_code__c.field-meta.xml
<CustomField>
    <fullName>RTGS_IFSC_code__c</fullName>
    <label>RTGS/ IFSC code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>